<?xml version="1.0"?>
<package>
  <name>h4r_camera_models</name>
  <version>0.0.0</version>
  <description>The h4r_camera_models package, containing camera models and information</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
  <author email="cyborgx1@gmail.com">Christian Holl</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>